test: 수익률 확인 test 추가